[gd_scene load_steps=34 format=2]

[ext_resource path="res://Sprites/Player/RUN/adventurer-run-04.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Player/JUMP/adventurer-jump-03.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Player/TURN/adventurer-TURN.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Player/RUN/adventurer-run-05.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Player/JUMP/adventurer-jump-02.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Player/IDLE/adventurer-idle-03.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Player/IDLE/adventurer-idle-01.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Player/RUN/adventurer-run-02.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Player/IDLE/adventurer-idle-00.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Player/IDLE/adventurer-idle-02.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Player/DOUBLEJUMP/adventurer-smrslt-00.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Player/DOUBLEJUMP/adventurer-smrslt-01.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Player/RUN/adventurer-run-01.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Player/DOUBLEJUMP/adventurer-smrslt-03.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Player/DOUBLEJUMP/adventurer-smrslt-02.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Player/RUN/adventurer-run-00.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Player/RUN/adventurer-run-03.png" type="Texture" id=17]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=18]
[ext_resource path="res://Sprites/Player/SLIDE/adventurer-slide-01.png" type="Texture" id=19]
[ext_resource path="res://Sprites/Player/SLIDE/adventurer-slide-00.png" type="Texture" id=20]
[ext_resource path="res://Sprites/Player/WALLSLIDE/adventurer-wall-slide-01.png" type="Texture" id=21]
[ext_resource path="res://Sprites/Player/WALLSLIDE/adventurer-wall-slide-00.png" type="Texture" id=22]
[ext_resource path="res://Objects/foot_step.tscn" type="PackedScene" id=23]
[ext_resource path="res://Sprites/dash_particle.png" type="Texture" id=24]
[ext_resource path="res://Objects/dash_sprite.tscn" type="PackedScene" id=25]
[ext_resource path="res://Objects/Camera2D.tscn" type="PackedScene" id=26]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 7 ), ExtResource( 10 ), ExtResource( 6 ) ],
"loop": true,
"name": "IDLE",
"speed": 10.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 19 ) ],
"loop": true,
"name": "SLIDE",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 13 ), ExtResource( 8 ), ExtResource( 17 ), ExtResource( 1 ), ExtResource( 4 ) ],
"loop": true,
"name": "RUN",
"speed": 10.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "JUMPDOWN",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 12 ), ExtResource( 15 ), ExtResource( 14 ) ],
"loop": true,
"name": "DOUBLEJUMP",
"speed": 10.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "TURN",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "JUMPUP",
"speed": 5.0
}, {
"frames": [ ExtResource( 22 ), ExtResource( 21 ) ],
"loop": true,
"name": "WALLSLIDE",
"speed": 7.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 5 )

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -2.79927, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
emission_shape = 1
emission_sphere_radius = 5.41
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 19.0
angular_velocity = -182.07
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 5 )

[sub_resource type="CapsuleShape2D" id=7]
radius = 2.93092
height = 16.3261

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 18 )
foot_step = ExtResource( 23 )
dash_object = ExtResource( 25 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 18 )
frames = SubResource( 1 )
animation = "IDLE"
frame = 1
playing = true
offset = Vector2( 0, -18 )

[node name="stand_shape" type="CollisionShape2D" parent="."]
position = Vector2( 0, 8 )
shape = SubResource( 2 )

[node name="slide_shape" type="CollisionShape2D" parent="."]
position = Vector2( 0, 13 )
shape = SubResource( 3 )
disabled = true

[node name="raycast_container" type="Position2D" parent="."]
position = Vector2( 0, 18 )

[node name="ray_ground" type="RayCast2D" parent="raycast_container"]
position = Vector2( -4, 1 )
enabled = true
cast_to = Vector2( 8, 0 )
collision_mask = 4

[node name="right_ray" type="RayCast2D" parent="raycast_container"]
position = Vector2( 11, -20 )
enabled = true
cast_to = Vector2( 0, 20 )
collision_mask = 4

[node name="left_ray" type="RayCast2D" parent="raycast_container"]
position = Vector2( -11, -20 )
enabled = true
cast_to = Vector2( 0, 20 )
collision_mask = 4

[node name="dash_timer" type="Timer" parent="."]
one_shot = true

[node name="dash_particles" type="Particles2D" parent="."]
emitting = false
amount = 80
local_coords = false
process_material = SubResource( 6 )
texture = ExtResource( 24 )

[node name="hitbox_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox_area"]
position = Vector2( 0, 7 )
shape = SubResource( 7 )

[node name="Camera2D" parent="." instance=ExtResource( 26 )]
[connection signal="area_entered" from="hitbox_area" to="." method="_on_hitbox_area_area_entered"]
